f aligned components and fixed bug with label rolled by index

--- a/frontend/src/components/CryptoLabel/CryptoLabel.module.css
+++ b/frontend/src/components/CryptoLabel/CryptoLabel.module.css
@@ -2,16 +2,22 @@
     display: flex;
     flex-direction: column;
     width: calc(100% + 2em);
+    position: relative;
 }
 
 .label {
     border-top: 1px solid #433F3F;
     display: grid;
-    grid-template-columns: 2em 5em 5em 2em;
+    grid-template-columns: 2em 5em 5em 2em 2em;
     justify-content: space-between;
     align-items: center;
     padding: 0.5em 1em;
     color: white;
+    animation: slideIn 0.3s ease;
+}
+
+.label > img:hover{
+    cursor: pointer;
 }
 
 .label > p {
@@ -24,6 +30,7 @@
     display: flex;
     align-items: center;
     gap: 0.4em;
+    grid-column-start: 3;
 }
 
 .market img {
@@ -37,4 +44,19 @@
     align-items: center;
     padding: 0.5em 1em;
     color: white;
+}
+
+.arrowRotated {
+    transform: rotate(180deg);
+}
+
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
